Implement LeaderboardServiceImpl refresh and overall stubs
Implement refreshLeagueLeaderboard, refreshOverallLeaderboard and
getOverallLeaderboard by re-ranking stored ranking rows. Allow the league
manager or an administrator to refresh a league board, and fall back to
the latest round season when no round is open.